<?xml version="1.0"?>
<package format="3">
  <name>disparity_image_proc</name>
  <version>1.12.5</version> <description>Conversion of disparity to depth images.</description>
  <author>Stefan Kohlbrecher</author>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/disparity_image_proc</url> <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>

</package>