<?xml version="1.0"?>
<package format="3">
  <name>image_undistort</name>
  <version>0.0.0</version>
  <description>
      Simple image undistorter
  </description>
  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>rcl_interfaces</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
